--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "weatherify",
+  "name": "weatherapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start":"node src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "hbs": "^4.2.0",
-    "request": "^2.88.2"
+    "express": "^4.17.1",
+    "hbs": "^4.0.6",
+    "request": "^2.88.0"
   }
 }
